--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agrimart</title>
+    <link rel="shortcut icon" href="./logo2.png" type="image/x-icon">
 </head>
 <body>
     <div id="root"></div>
